add tests for proxy interceptor builder